Create interfaces and swagger definitions
